<resources>
    <string name="app_name2">তানভীর আহমেদ রবিন</string>
    <string name="app_name"> তানভীর আহমেদ রবিন </string>
    <string name="main_image_description">প্রধান ছবি</string>
    <string name="name_hint"> আপনার নাম লিখুন </string>
    <string name="mobile_hint">আপনার মোবাইল নম্বর</string>
    <string name="email_hint">ইমেল ঠিকানা</string>
    <string name="submit_button_text">জমা দিন</string>
    <string name="home">মূলপাতা</string>
    <string name="contact_me">যোগাযোগ করুন</string>
    <string name="about_us">আমার সম্পর্কে</string>
    <string name="complain_us">আপনার অভিযোগ ও পরামর্শ জানান</string>
    <string name="extortion">চাঁদাবাজ ও মাদক ব্যবাসায়ীদের তথ্য দিন</string>
    <string name="gallery">গ্যালারি</string>">
    <string name="gallery31">বিএনপির ৩১ দফা </string>">
    <string name="data_collection_form">"বিএনপি তে যোগ দিন "</string>
    <string name="browse_files"> ছবি দিন ( যদি থাকে ) </string>
    <string name="about_me">আমার সম্পর্কে</string>
    <string name="john_doe">জন ডো</string>
    <string name="let_s_connect">যোগাযোগের মাধ্যম</string>
    <string name="we_value_your_feedback">আমি আপনার কথা শুনতে চাই</string>
    <string name="your_opinion_helps_us_improve">আপনার মতামত আমাদের উন্নতি সাধনে সাহায্য করে</string>
    <string name="full_name">আপনার নাম লিখুন </string>
    <string name="phone_number"> আপনার ফোন নম্বর দিন</string>
    <string name="your_message">আপনার অভিযোগ লিখুন </string>
    <string name="drop_your_files_here_or">ছবি দিন ( যদি থাকে ) </string>
    <string name="send_message"> আপনার অভিযোগ  লিখুন </string>
    <string name="get_in_touch">যোগাযোগ করুন</string>
    <string name="we_d_love_to_hear_from_you">আমি আপনার কথা শুনতে চাই</string>
    <string name="father_name">পিতার নাম</string>
    <string name="mother_name">মাতার নাম</string>
    <string name="nid">জাতীয় পরিচয়পত্র নাম্বার </string>
    <string name="date_of_birth">জন্ম তারিখ</string>
    <string name="address">ঠিকানা</string>
    <string name="ward_name">ওয়ার্ডের নাম</string>
    <string name="thana_name">থানার নাম</string>
    <string name="gender">লিঙ্গ</string>
    <string name="congratulations">অভিনন্দন! 🎉</string>
    <string name="your_submission_has_been_successfully_received"> আপনার অভিযোগ টি সফলভাবে প্রদান করা হয়েছে </string>
    <string name="thank_you_for_your_submission"> অতি দ্রুত সময়ের মধ্যে আপনার সাথে যোগাযোগ করা হবে </string>
    <string name="provide_data">চাঁদাবাজ ও মাদক ব্যবাসায়ীদের তথ্য দিন</string>
    <string name="subtitle_extortion">চাঁদাবাজ ও মাদক ব্যবাসায়ীদের তথ্য দিন</string>
    <string name="details_explaination">বিস্তারিত লিখুন </string>
    <string name="contact_information">যোগাযোগের তথ্য</string>
    <string name="connect_with_us">আমাদের সাথে যোগাযোগ করুন</string>
    <string name="hello">hello</string>
    <string name="full_image">Full image</string>
</resources>