<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/swipeRefreshLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.DataCollectionActivity">


    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- Custom Toolbar -->
            <androidx.appcompat.widget.Toolbar
                android:id="@+id/custom_toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorAccent"
                android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
                app:title="@string/app_name"
                app:titleTextColor="@color/white"
                app:titleTextAppearance="@style/Toolbar.TitleText">
            </androidx.appcompat.widget.Toolbar>

            <!-- Header with Gradient -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:background="@drawable/contact_header_gradient"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="24dp">


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/data_collection_form"
                    android:textColor="@color/white"
                    android:textSize="26sp"
                    android:paddingBottom="10dp"
                    android:gravity="center_horizontal"
                    android:textStyle="bold"/>

            </LinearLayout>



            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp"
                >
                <!-- ProgressBar centered on the screen -->
                <ProgressBar
                    android:id="@+id/progressBar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    android:indeterminateTint="@color/accent"
                    android:layout_centerInParent="true"
                    />

                    <ScrollView
                        android:id="@+id/fromMain"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/glass_button_background"
                        android:layout_marginVertical="16dp"
                        android:layout_centerInParent="true"
                        >

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:padding="16dp">


                            <com.google.android.material.textfield.TextInputLayout
                                android:id="@+id/nameInputLayout"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/name_hint"
                                app:boxStrokeColor="@color/primary_color"
                                app:hintTextColor="@color/primary_color"
                                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                                android:layout_marginBottom="16dp">

                                <com.google.android.material.textfield.TextInputEditText
                                    android:id="@+id/nameInput"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:inputType="textPersonName" />
                            </com.google.android.material.textfield.TextInputLayout>

                            <com.google.android.material.textfield.TextInputLayout
                                android:id="@+id/fatherNameInputLayout"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/father_name"
                                app:boxStrokeColor="@color/primary_color"
                                app:hintTextColor="@color/primary_color"
                                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                                android:layout_marginBottom="16dp">

                                <com.google.android.material.textfield.TextInputEditText
                                    android:id="@+id/fatherNameInput"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:inputType="textPersonName" />
                            </com.google.android.material.textfield.TextInputLayout>

                            <com.google.android.material.textfield.TextInputLayout
                                android:id="@+id/motherNameInputLayout"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/mother_name"
                                app:boxStrokeColor="@color/primary_color"
                                app:hintTextColor="@color/primary_color"
                                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                                android:layout_marginBottom="16dp">

                                <com.google.android.material.textfield.TextInputEditText
                                    android:id="@+id/motherNameInput"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:inputType="textPersonName" />
                            </com.google.android.material.textfield.TextInputLayout>

                            <com.google.android.material.textfield.TextInputLayout
                                android:id="@+id/nidInputLayout"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/nid"
                                app:boxStrokeColor="@color/primary_color"
                                app:hintTextColor="@color/primary_color"
                                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                                android:layout_marginBottom="16dp">

                                <com.google.android.material.textfield.TextInputEditText
                                    android:id="@+id/nidInput"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:inputType="number" />
                            </com.google.android.material.textfield.TextInputLayout>

                            <include
                                android:id="@+id/dobCardView"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                layout="@layout/date_selection_layout"
                                android:layout_marginBottom="10dp"
                                />

                            <com.google.android.material.textfield.TextInputLayout
                                android:id="@+id/addressInputLayout"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/address"
                                app:boxStrokeColor="@color/primary_color"
                                app:hintTextColor="@color/primary_color"
                                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                                android:layout_marginBottom="16dp">

                                <com.google.android.material.textfield.TextInputEditText
                                    android:id="@+id/addressInput"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:inputType="textPostalAddress" />
                            </com.google.android.material.textfield.TextInputLayout>

                            <com.google.android.material.textfield.TextInputLayout
                                android:id="@+id/genderInputLayout"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/gender"
                                app:boxStrokeColor="@color/primary_color"
                                app:hintTextColor="@color/primary_color"
                                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                                android:layout_marginBottom="16dp">

                                <AutoCompleteTextView
                                    android:id="@+id/genderNameInput"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:inputType="none" />

                            </com.google.android.material.textfield.TextInputLayout>

                            <com.google.android.material.textfield.TextInputLayout
                                android:id="@+id/wardNameInputLayout"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/ward_name"
                                app:boxStrokeColor="@color/primary_color"
                                app:hintTextColor="@color/primary_color"
                                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                                android:layout_marginBottom="16dp">

                                <AutoCompleteTextView
                                    android:id="@+id/wardNameInput"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:inputType="none" />
                            </com.google.android.material.textfield.TextInputLayout>

                            <com.google.android.material.textfield.TextInputLayout
                                android:id="@+id/thanaNameInputLayout"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/thana_name"
                                app:boxStrokeColor="@color/primary_color"
                                app:hintTextColor="@color/primary_color"
                                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                                android:layout_marginBottom="16dp">

                                <AutoCompleteTextView
                                    android:id="@+id/thanaNameInput"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:inputType="none" />
                            </com.google.android.material.textfield.TextInputLayout>

                            <com.google.android.material.textfield.TextInputLayout
                                android:id="@+id/mobileInputLayout"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/mobile_hint"
                                app:boxStrokeColor="@color/primary_color"
                                app:hintTextColor="@color/primary_color"
                                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                                android:layout_marginBottom="16dp">

                                <com.google.android.material.textfield.TextInputEditText
                                    android:id="@+id/mobileInput"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:inputType="phone" />
                            </com.google.android.material.textfield.TextInputLayout>

                        </LinearLayout>
                    </ScrollView>

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/dataSubmitButton"
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:text="@string/submit_button_text"
                        android:textSize="16sp"
                        android:textAllCaps="false"
                        app:cornerRadius="12dp"
                        style="@style/GradientButton"
                        android:layout_marginVertical="5dp"
                        android:layout_below="@+id/fromMain"
                        />

            </RelativeLayout>

        </LinearLayout>


    </androidx.core.widget.NestedScrollView>

</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>